a very simple tic tac toe game

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <script defer src="js/script.js"></script>
 </head>
 <body>
-    
+    <div class="game">
+        <div id="1" onclick="game(this.id)"></div>
+        <div id="2" onclick="game(this.id)"></div>
+        <div id="3" onclick="game(this.id)"></div>
+        <div id="4" onclick="game(this.id)"></div>
+        <div id="5" onclick="game(this.id)"></div>
+        <div id="6" onclick="game(this.id)"></div>
+        <div id="7" onclick="game(this.id)"></div>
+        <div id="8" onclick="game(this.id)"></div>
+        <div id="9" onclick="game(this.id)"></div>
+    </div>
 </body>
 </html>
