updated to a shorted cleaner and better code

--- a/index.html
+++ b/index.html
@@ -1,27 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
     <script defer src="js/script.js"></script>
-</head>
-<body>
-    <div id="again">
-        <h2 id="indicator"></h2>
-        <button onclick="playAgin()">play again</button>
-    </div>
+  </head>
+  <body>
     <div id="board">
-        <div id="1" onclick="game(this.id)"></div>
-        <div id="2" onclick="game(this.id)"></div>
-        <div id="3" onclick="game(this.id)"></div>
-        <div id="4" onclick="game(this.id)"></div>
-        <div id="5" onclick="game(this.id)"></div>
-        <div id="6" onclick="game(this.id)"></div>
-        <div id="7" onclick="game(this.id)"></div>
-        <div id="8" onclick="game(this.id)"></div>
-        <div id="9" onclick="game(this.id)"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
     </div>
-</body>
+  </body>
 </html>
